crux-mir/test/symb_eval/crux/multi.good
test multi/<DISAMB>::fail1[0]: [Crux] Attempting to prove verification conditions.
FAILED
test multi/<DISAMB>::fail2[0]: [Crux] Attempting to prove verification conditions.
FAILED
test multi/<DISAMB>::fail3[0]: [Crux] Attempting to prove verification conditions.
FAILED

failures:

---- multi/<DISAMB>::fail1[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   test/symb_eval/crux/multi.rs:8:22: 8:27: error: in multi/<DISAMB>::fail1[0]
[Crux]   attempt to compute `copy _1 + const 1_u8`, which would overflow
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:44:9: 44:79 !test/symb_eval/crux/multi.rs:8:5: 8:32: error: in multi/<DISAMB>::fail1[0]
[Crux]   MIR assertion at test/symb_eval/crux/multi.rs:8:5:
[Crux]   	x + 1 > x

---- multi/<DISAMB>::fail2[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/core/src/panic.rs:62:9: 62:73 !test/symb_eval/crux/multi.rs:15:9: 15:22: error: in multi/<DISAMB>::fail2[0]
[Crux]   panicking::panic_fmt, called from multi/<DISAMB>::fail2[0]

---- multi/<DISAMB>::fail3[0] counterexamples ----
[Crux] Found counterexample for verification goal
[Crux]   ./libs/crucible/lib.rs:44:9: 44:79 !test/symb_eval/crux/multi.rs:20:5: 20:29: error: in multi/<DISAMB>::assert_zero[0]
[Crux]   MIR assertion at test/symb_eval/crux/multi.rs:20:5:
[Crux]   	x == 0

[Crux-MIR] ---- FINAL RESULTS ----
[Crux] Goal status:
[Crux]   Total: 4
[Crux]   Proved: 0
[Crux]   Disproved: 4
[Crux]   Incomplete: 0
[Crux]   Unknown: 0
[Crux] Overall status: Invalid.
